# voiceai

./: .env.example  .gitignore  Cargo.toml  README.md
src/: base64.rs  database.rs  handlers.rs  main.rs  models.rs  services.rs
templates/: index.html
