[package]
name = "voiceai"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"
dotenv = "0.15"

